--- a/task25/index.html
+++ b/task25/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>IFE Task25</title>
+	<title>树形组件</title>
 	<link rel="stylesheet" href="css/iconfont.css">
 	<link rel="stylesheet" href="style.css">
 </head>
