--- a/task17/index.html
+++ b/task17/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE Task17</title>
+    <title>柱状图图表</title>
     <style>
 		.aqi-chart-wrap{
 			width: 98%;
