--- a/task37/index.html
+++ b/task37/index.html
@@ -23,6 +23,7 @@
 				<div class="header">这是一个浮出层</div>
 				<div class="body">这是一个浮出层</div>
 				<button type="button" class="footer">确定</button>
+				<div class="resize"></div>
 			</div>
 		</div>
 	</div>
