--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <section class="main-content">
       <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
       
-
+      <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/task42">任务四十二：UI组件之日历组件（三）</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task42">code</a>
+      </p>
       <p>
         <a target="blank" href="https://kad0108.github.io/IFE/task37">任务三十七：UI组件之浮出层</a>
         &nbsp;/&nbsp;
