--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
       <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
       
       <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/task44">任务四十四：多功能相册之瀑布布局</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task44">code</a>
+      </p>
+      <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/task43">任务四十三：多功能相册之拼图布局</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task43">code</a>
+      </p>
+      <p>
         <a target="blank" href="https://kad0108.github.io/IFE/task42">任务四十二：UI组件之日历组件（三）</a>
         &nbsp;/&nbsp;
         <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task42">code</a>
