--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
       
       <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/task45">任务四十五：多功能相册之木桶布局</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task45">code</a>
+      </p>
+      <p>
         <a target="blank" href="https://kad0108.github.io/IFE/task44">任务四十四：多功能相册之瀑布布局</a>
         &nbsp;/&nbsp;
         <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/task44">code</a>
