--- a/task50/index.html
+++ b/task50/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_wz0pi61sccg9o1or.css">
     <title>task50</title>
   </head>
   <body>
