--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2017</h3>
       
       <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/2017/musicPlayer/">音乐播放器</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/2017/musicPlayer">code</a>
+      </p>
+      <p>
         <a target="blank" href="https://kad0108.github.io/IFE/2017/contextMenu/">自定义网页右键菜单</a>
         &nbsp;/&nbsp;
         <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/2017/contextMenu">code</a>
