--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/kad0108/IFE" class="btn">View on GitHub</a>
       <a href="https://github.com/kad0108/IFE/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/kad0108/IFE/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="http://ife.baidu.com/course/all" class="btn">Baidu Institute of Front End Technology</a>
     </section>
 
     <section class="main-content">
@@ -66,6 +66,11 @@
         <a target="blank" href="https://kad0108.github.io/IFE/2016/task37">任务三十七：UI组件之浮出层</a>
         &nbsp;/&nbsp;
         <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/2016/task37">code</a>
+      </p>
+      <p>
+        <a target="blank" href="https://kad0108.github.io/IFE/2016/task36">任务三十六：听指令的小方块（四）</a>
+        &nbsp;/&nbsp;
+        <a target="blank" href="https://github.com/kad0108/IFE/tree/gh-pages/2016/task36">code</a>
       </p>
       <p>
         <a target="blank" href="https://kad0108.github.io/IFE/2016/task26">任务二十六：行星与飞船（一）</a>
